--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
-# runtime
 /storage/cache/
 /storage/logs/
 /storage/sessions/
 /storage/compiled_tpl/
 /uploads/
-
-# local
 .env
 .idea/
 .vscode/
-
-# vendor (если появится)
 /vendor/
+.DS_Store
